# hello-docker-fullstack

./: README.md  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: deploy.yaml
backend/: Dockerfile  package.json  tsconfig.json
backend-python/: Dockerfile  README.md
backend-python/app/: main.py
backend/src/: server.ts
frontend/: Dockerfile.dev  package-lock.json  package.json
frontend/src/: App.tsx
nginx/: default.conf
nodejs/: Dockerfile.dev  package-lock.json  package.json
nodejs/src/: server.ts
python/: Dockerfile  README.md  pyproject.toml
python/app/: main.py
web/: package.json
web/src/: App.tsx  index.tsx
