[tool.poetry]
name = "python2"
version = "0.1.0"
description = ""
authors = ["Lee-Si-Yoon <dlduqehd1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
